# apple-swift

./: CMakeLists.txt
cmake/modules/: AddSwift.cmake  SwiftComponents.cmake  SwiftConfigureSDK.cmake  SwiftExternal.cmake  SwiftSharedCMakeConfig.cmake
docs/: CMakeLists.txt
include/swift/AST/: ASTContext.h  ConcreteDeclRef.h  DiagnosticsSema.def  Identifier.h  KnownIdentifiers.def  LayoutConstraint.h  Type.h  TypeAlignments.h
include/swift/Basic/: DiverseStack.h  LangOptions.h  SourceManager.h
include/swift/Frontend/: Frontend.h
include/swift/Option/: FrontendOptions.td
include/swift/Runtime/: MutexWin32.h
include/swift/SIL/: CFG.h  LoopInfo.h  SILModule.h  SILNode.h  SILType.h  SILValue.h
include/swift/Serialization/: ModuleFile.h
include/swift/SwiftRemoteMirror/: CMakeLists.txt
lib/AST/: ASTContext.cpp  ASTPrinter.cpp  ASTScopeCreation.cpp  Builtins.cpp  CMakeLists.txt  Decl.cpp  Identifier.cpp
lib/ASTSectionImporter/: CMakeLists.txt
lib/Basic/: CMakeLists.txt  SourceLoc.cpp  Unicode.cpp
lib/ClangImporter/: CMakeLists.txt  ClangImporter.cpp  ImportDecl.cpp  ImportName.cpp  ImportName.h  ImporterImpl.h  SwiftLookupTable.cpp
lib/Demangling/: CMakeLists.txt
lib/Driver/: CMakeLists.txt  Compilation.cpp  Driver.cpp  ToolChains.cpp
lib/Frontend/: CMakeLists.txt  CompilerInvocation.cpp  Frontend.cpp
lib/FrontendTool/: CMakeLists.txt
lib/IDE/: CMakeLists.txt
lib/IRGen/: CMakeLists.txt  GenDecl.cpp  IRBuilder.h  IRGen.cpp  IRGenDebugInfo.cpp  IRGenDebugInfo.h  IRGenModule.cpp
lib/Immediate/: CMakeLists.txt  Immediate.cpp  REPL.cpp
lib/Index/: CMakeLists.txt
lib/Migrator/: CMakeLists.txt
lib/Option/: CMakeLists.txt
lib/Parse/: CMakeLists.txt
lib/ParseSIL/: CMakeLists.txt
lib/PrintAsObjC/: CMakeLists.txt
lib/RemoteAST/: CMakeLists.txt
lib/SIL/: CMakeLists.txt  LoopInfo.cpp  SILDifferentiabilityWitness.cpp  SILFunction.cpp  SILModule.cpp  SILOwnershipVerifier.cpp
lib/SILGen/: CMakeLists.txt  SILGenExpr.cpp
lib/SILOptimizer/: CMakeLists.txt
lib/SILOptimizer/Analysis/: EscapeAnalysis.cpp  LoopRegionAnalysis.cpp
lib/SILOptimizer/LoopTransforms/: LoopRotate.cpp
lib/SILOptimizer/PassManager/: PassManager.cpp
lib/SILOptimizer/Transforms/: StackPromotion.cpp  TempRValueElimination.cpp
lib/SILOptimizer/UtilityPasses/: LSLocationPrinter.cpp
lib/Sema/: CMakeLists.txt
lib/Serialization/: Deserialization.cpp  ModuleFile.cpp  ModuleFormat.h  Serialization.cpp  SerializedModuleLoader.cpp
lib/SwiftDemangle/: CMakeLists.txt
lib/TBDGen/: CMakeLists.txt
stdlib/: CMakeLists.txt
stdlib/cmake/modules/: SwiftGYBSupport.cmake  SwiftSource.cmake
stdlib/private/SwiftPrivate/: IO.swift
stdlib/public/: CMakeLists.txt
stdlib/public/Differentiation/: CMakeLists.txt
stdlib/public/Platform/: CMakeLists.txt
stdlib/public/Reflection/: CMakeLists.txt
stdlib/public/SDK/CoreGraphics/: CMakeLists.txt
stdlib/public/SDK/Foundation/: CMakeLists.txt
stdlib/public/SDK/Vision/: CMakeLists.txt
stdlib/public/SDK/Windows/: WinSDK.swift
stdlib/public/SwiftOnoneSupport/: CMakeLists.txt
stdlib/public/SwiftRemoteMirror/: CMakeLists.txt
stdlib/public/SwiftShims/: CMakeLists.txt  Visibility.h
stdlib/public/core/: CMakeLists.txt
stdlib/public/runtime/: CMakeLists.txt  Casting.cpp  Metadata.cpp
stdlib/public/stubs/: CMakeLists.txt  GlobalObjects.cpp  Stubs.cpp  UnicodeNormalization.cpp
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/Driver/: windows-libc-options.swift  windows-libc-required.swift
test/Frontend/: ast-dump.swift
test/IRGen/: dllimport.swift
test/sil-extract/: load-serialized-sil.swift
test/sil-opt/: sil-opt.swift
tools/: CMakeLists.txt
tools/SourceKit/tools/complete-test/: CMakeLists.txt
tools/SourceKit/tools/sourcekitd-repl/: CMakeLists.txt
tools/SourceKit/tools/sourcekitd-test/: CMakeLists.txt  sourcekitd-test.cpp
tools/SwiftSyntax/: CMakeLists.txt  SwiftcInvocation.swift
tools/driver/: CMakeLists.txt  api_notes.cpp
tools/lldb-moduleimport-test/: CMakeLists.txt
tools/sil-func-extractor/: CMakeLists.txt
tools/sil-llvm-gen/: CMakeLists.txt
tools/sil-nm/: CMakeLists.txt
tools/sil-opt/: CMakeLists.txt  SILOpt.cpp
tools/sil-passpipeline-dumper/: CMakeLists.txt
tools/swift-api-digester/: CMakeLists.txt
tools/swift-demangle/: CMakeLists.txt
tools/swift-demangle-fuzzer/: CMakeLists.txt
tools/swift-demangle-yamldump/: CMakeLists.txt
tools/swift-ide-test/: CMakeLists.txt  swift-ide-test.cpp
tools/swift-llvm-opt/: CMakeLists.txt
tools/swift-refactor/: CMakeLists.txt
tools/swift-reflection-dump/: CMakeLists.txt  swift-reflection-dump.cpp
tools/swift-remoteast-test/: CMakeLists.txt
tools/swift-stdlib-tool/: CMakeLists.txt
tools/swift-syntax-test/: CMakeLists.txt
utils/: CMakeLists.txt  build-presets.ini  build-script-impl
utils/build_swift/build_swift/: driver_arguments.py
utils/build_swift/tests/: expected_options.py
