add_swift_host_tool(sil-func-extractor
  SILFunctionExtractor.cpp
)
target_link_libraries(sil-func-extractor
                      PRIVATE
                        swiftClangImporter
                        swiftDWARFImporter
                        swiftFrontend
                        swiftSerialization
                        swiftSILGen
                        swiftSILOptimizer)
