add_swift_host_tool(sil-nm
  SILNM.cpp
)
target_link_libraries(sil-nm
                      PRIVATE
                        swiftClangImporter
                        swiftFrontend
                        swiftSerialization
                        swiftSILGen
                        swiftSILOptimizer)
